# tacotron2-ros

./: .gitmodules  README.md  requirements.txt  stream_remote.md  torch-requirements.txt
tacotron2_ros/: CMakeLists.txt  package.xml
tacotron2_ros/action/: TTS.action
tacotron2_ros/launch/: tacotron2.launch
tacotron2_ros/src/: tacotron2.py  tacotron2_node.py  tacotron2_tts_action_server.py
